--- a/styles.css
+++ b/styles.css
@@ -12,4 +12,11 @@
   border: 1px solid red;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+}
+
+.grid-cell {
+  border: 1px solid blue;
+  height: 2rem;
+  width: 2rem;
 }
