--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@
   border: 1px solid red;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(16, 25px [col-start]);
 }
 
 .grid-cell {
