--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,17 @@
   text-align: center;
 }
 
-/* TODO: make the cells fit in a symmetrical grid */
 .grid-container {
   height: 30rem;
   width: 30rem;
-  border: 1px solid red;
+  border: 1px solid gray;
   margin-left: auto;
   margin-right: auto;
   display: grid;
 }
 
 .grid-cell {
-  border: 1px solid blue;
-  height: 1rem;
-  width: 1rem;
+  border: 1px solid lightgray;
+  height: 100%;
+  width: 100%;
 }
