--- a/styles.css
+++ b/styles.css
@@ -12,21 +12,9 @@
   text-align: center;
 }
 
-.grid-size-text {
-  margin: 0;
-}
-
-.grid-size-field {
-}
-
 .grid-size-btn {
-}
-
-.set-grid-size {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2vh;
+  height: 3rem;
+  width: 6rem;
 }
 
 .grid-container {
