--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@
   text-align: center;
 }
 
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+}
+
 .button {
   height: 3rem;
   width: 6rem;
